--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-<h1> This is Marcus Curran's Website!!!</h1>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Marcus' WebPage</title>
+  </head>
+  
+  <body>
+    <h1> This is Marcus Curran's Website!!!</h1>
+  </body>
+</html  
+
