--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="default.css">
+    <link type="text/css" rel="stylesheet" href="default.css">
     <meta charset="utf-8">
     <title>Marcus' WebPage</title>
   </head>
