--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   
   <body>
     <h1> This is Marcus Curran's Website!!!</h1>
+    <img src="myProfilePic.jpg" id="ProfilePic">
   </body>
 </html  
-
