--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
   </head>
   
   <body>
+    <ul class="nav_bar">
+        <li class="nav_bar_items"><a href="index.html">Home</a></li>
+        <li class="nav_bar_items"><a href="projects">Projects</a></li>
+        <li class="nav_bar_items"><a href="contact.html">Contact</a></li>
+        <li class="nav_bar_items"><a href="about.html">About</a></li>
+    </ul> 
     <h1> This is Marcus Curran's Website!!!</h1>
-    <img src="myProfilePic.jpg" id="ProfilePic">
+    <img src="myProfilePic.jpg" class="ProfilePic">
   </body>
-</html  
+</html>
