--- a/projects.html
+++ b/projects.html
@@ -2,18 +2,41 @@
 <html>
   <head>
     <link type="text/css" rel="stylesheet" href="default.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta charset="utf-8">
     <title>Marcus' Projects</title>
   </head>
   
   <body>
     <ul class="nav_bar">
-        <li class="nav_bar_items"><a href="index.html">Home</a></li>
-        <li class="nav_bar_items"><a href="projects.html">Projects</a></li>
-        <li class="nav_bar_items"><a href="contact.html">Contact</a></li>
-        <li class="nav_bar_items"><a href="about.html">About</a></li>
-    </ul> 
+      <li class="nav_bar_items"><a href="index.html">Home</a></li>
+      <li class="nav_bar_items"><a href="projects.html">Projects</a></li>
+      <li class="nav_bar_items"><a href="contact.html">Contact</a></li>
+      <li class="nav_bar_items"><a href="about.html">About</a></li>
+      <li class="social_media_buttons"><a href="https://www.facebook.com/marcus.curran.7" class="fa fa-facebook"></a></li>
+      <li class="social_media_buttons"><a href="https://twitter.com/marcusauce" class="fa fa-twitter"></a></li>
+  </ul>
     <h1>My Projetcs!!!</h1>
    
+    <div class="flex-container">
+      <div>
+        <h3>Coding Challenge</h3>
+        <img class="flex_images" src="CodingChallengeScreenShot.png">
+        <p>Developed by: Marcus Curran</p>
+        <p>Link: <a href="https://github.com/marcusc83/High-Touch-Technology-Coding-Challenge">Coding Challenge</a></p>
+      </div>
+      <div>
+        <h3>Coding Challenge</h3>
+        <img class="flex_images" src="CodingChallengeScreenShot.png">
+        <p>Developed by: Marcus Curran</p>
+        <p>Link: <a href="https://github.com/marcusc83/High-Touch-Technology-Coding-Challenge">Coding Challenge</a></p>
+      </div>
+      <div>
+        <h3>Coding Challenge</h3>
+        <img class="flex_images" src="CodingChallengeScreenShot.png">
+        <p>Developed by: Marcus Curran</p>
+        <p>Link: <a href="https://github.com/marcusc83/High-Touch-Technology-Coding-Challenge">Coding Challenge</a></p>
+      </div>
+    </div>
   </body>
 </html>
