--- a/about.html
+++ b/about.html
@@ -2,19 +2,28 @@
 <html>
   <head>
     <link type="text/css" rel="stylesheet" href="default.css">
+    <!--Link for social media Icons-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta charset="utf-8">
     <title>About Marcus</title>
   </head>
   
   <body>
+    <!-- Navigation Bar. Same for each page-->
     <ul class="nav_bar">
-        <li class="nav_bar_items"><a href="index.html">Home</a></li>
-        <li class="nav_bar_items"><a href="projects.html">Projects</a></li>
-        <li class="nav_bar_items"><a href="contact.html">Contact</a></li>
-        <li class="nav_bar_items"><a href="about.html">About</a></li>
-    </ul> 
+      <li class="nav_bar_items"><a href="index.html">Home</a></li>
+      <li class="nav_bar_items"><a href="projects.html">Projects</a></li>
+      <li class="nav_bar_items"><a href="contact.html">Contact</a></li>
+      <li class="nav_bar_items"><a href="about.html">About</a></li>
+      <li class="social_media_buttons"><a href="https://www.facebook.com/marcus.curran.7" class="fa fa-facebook"></a></li>
+      <li class="social_media_buttons"><a href="https://twitter.com/marcusauce" class="fa fa-twitter"></a></li>
+  </ul>
+  <!-- end Nav Bar-->
+
     <h1> A Little About Me!!</h1>
+    <!--Making two columns. Text will be on side of Pics-->
     <div class="row">
+      <!--First Column-->
         <div class="column1 left1">
           <img src="WebPageDuct.jpg" class="webPageDuctPic">
         </div>
@@ -22,7 +31,7 @@
           <h2>Work</h2>
           <p>
             I was working as a commercial Union HVAC tech/Sheet Metal worker up until September 1st.
-            That is when I took a job in the Union Office as a Business Reprasenative/Organizer. So I now work out of the 
+            That is when I took a job in the <a href="http://sheetmetal29.com">Union Office</a> as a Business Reprasenative/Organizer. So I now work out of the 
             office, mostly on the phone or in front of a computer all day. I am looking forward to the new challenges that 
             will come from this position, plus I get to use some of the skills I have gained from my courses at
             Southwestern now. 
@@ -37,13 +46,14 @@
         </div>
       </div>
       <div class="row">
+        <!--End First Columns and Begin 2nd column-->
         <div class="column2 left2">
             <h2>Hobbies</h2>
             <p>
               When I am not working I enjoy spending time with the family, hanging out with friends, barbequeing, and golfing.
               I do not get to do any of these activities as nearly often as I would like. But one day I am sure life will slow
               down and I will get to enjoy more of it. 
-            </p>\
+            </p>
             <br>
             <br>
             <br>
@@ -56,5 +66,6 @@
           <img src="Golf.jpg" class="webPageDuctPic">
         </div>
       </div>
+      <!--End of second Column-->
   </body>
 </html>
