--- a/projects.html
+++ b/projects.html
@@ -8,28 +8,33 @@
   </head>
   
   <body>
-    <ul class="nav_bar">
+     <!-- Navigation Bar. Same for each page-->
+     <ul class="nav_bar">
       <li class="nav_bar_items"><a href="index.html">Home</a></li>
       <li class="nav_bar_items"><a href="projects.html">Projects</a></li>
       <li class="nav_bar_items"><a href="contact.html">Contact</a></li>
       <li class="nav_bar_items"><a href="about.html">About</a></li>
+      <li class="nav_bar_items"><a href="volunteer.html">Volunteering</a></li>
+      <li class="nav_bar_items"><a href="multimedia.html">Multimedia</a></li>
       <li class="social_media_buttons"><a href="https://www.facebook.com/marcus.curran.7" class="fa fa-facebook"></a></li>
       <li class="social_media_buttons"><a href="https://twitter.com/marcusauce" class="fa fa-twitter"></a></li>
+      <li class="social_media_buttons"><a href="https://github.com/marcusc83" class="fa fa-github"></a></li>
   </ul>
+  <!-- end Nav Bar-->
     <h1>My Projetcs!!!</h1>
-   
+   <!--Setting up for my flex Layout-->
     <div class="flex-container">
       <div>
-        <h3>Coding Challenge</h3>
+        <h3>Das Local</h3>
         <img class="flex_images" src="CodingChallengeScreenShot.png">
         <p>Developed by: Marcus Curran</p>
-        <p>Link: <a href="https://github.com/marcusc83/High-Touch-Technology-Coding-Challenge">Coding Challenge</a></p>
+        <p>Link: <a href="https://github.com/marcusc83/Das_Local">Das Local</a></p>
       </div>
       <div>
-        <h3>Coding Challenge</h3>
+        <h3>Dinner Chooser</h3>
         <img class="flex_images" src="CodingChallengeScreenShot.png">
         <p>Developed by: Marcus Curran</p>
-        <p>Link: <a href="https://github.com/marcusc83/High-Touch-Technology-Coding-Challenge">Coding Challenge</a></p>
+        <p>Link: <a href="https://github.com/marcusc83/DinnerChooser">Dinner Chooser</a></p>
       </div>
       <div>
         <h3>Coding Challenge</h3>
