--- a/volunteer.html
+++ b/volunteer.html
@@ -21,7 +21,24 @@
       <li class="social_media_buttons"><a href="https://github.com/marcusc83" class="fa fa-github"></a></li>
   </ul>
   <!-- end Nav Bar-->
-    <h1> This is Marcus Curran's Website!!!</h1>
-    <img src="myProfilePic.jpg" class="ProfilePic">
+    <h1> A Little About Me!!</h1>
+    <div class="row">
+        <div class="column1 left1">
+          <img src="WebPageDuct.jpg" class="webPageDuctPic">
+        </div>
+        <div class="column1 right1">
+          <h2>Work</h2>
+          <p>Some text..</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="column2 left2">
+            <h2>Work</h2>
+            <p>Some text..</p>
+        </div>
+        <div class="column2 right2">
+          <img src="WebPageDuct.jpg" class="webPageDuctPic">
+        </div>
+      </div>
   </body>
 </html>
