--- a/contact.html
+++ b/contact.html
@@ -8,14 +8,19 @@
   </head>
   
   <body>
+    <!-- Navigation Bar. Same for each page-->
     <ul class="nav_bar">
       <li class="nav_bar_items"><a href="index.html">Home</a></li>
       <li class="nav_bar_items"><a href="projects.html">Projects</a></li>
       <li class="nav_bar_items"><a href="contact.html">Contact</a></li>
       <li class="nav_bar_items"><a href="about.html">About</a></li>
+      <li class="nav_bar_items"><a href="volunteer.html">Volunteering</a></li>
+      <li class="nav_bar_items"><a href="multimedia.html">Multimedia</a></li>
       <li class="social_media_buttons"><a href="https://www.facebook.com/marcus.curran.7" class="fa fa-facebook"></a></li>
       <li class="social_media_buttons"><a href="https://twitter.com/marcusauce" class="fa fa-twitter"></a></li>
+      <li class="social_media_buttons"><a href="https://github.com/marcusc83" class="fa fa-github"></a></li>
   </ul>
+  <!-- end Nav Bar-->
     <h1>Contact Me!!!</h1>
     
   </body>
