--- a/about.html
+++ b/about.html
@@ -70,5 +70,8 @@
         </div>
       </div>
       <!--End of second Column-->
+      <div class="footer">
+        <h2 style="padding: 15px 0px;">Developed By: Marcus Curran</h2>
+      </div>
   </body>
 </html>
