--- a/multimedia.html
+++ b/multimedia.html
@@ -75,5 +75,8 @@
             <li>Use the tools in the thumbnail to edit how you see fit</li>
         </ol>
     </div>
+    <div class="footer">
+        <h2 style="padding: 15px 0px;">Developed By: Marcus Curran</h2>
+      </div>  
   </body>
 </html>
