--- a/projects.html
+++ b/projects.html
@@ -43,5 +43,29 @@
         <p>Link: <a href="https://github.com/marcusc83/High-Touch-Technology-Coding-Challenge">Coding Challenge</a></p>
       </div>
     </div>
+<!--Second Row of Projects-->
+    <div class="flex-container">
+      <div>
+        <h3>Das Local</h3>
+        <img class="flex_images" src="CodingChallengeScreenShot.png">
+        <p>Developed by: Marcus Curran</p>
+        <p>Link: <a href="https://github.com/marcusc83/Das_Local">Das Local</a></p>
+      </div>
+      <div>
+        <h3>Dinner Chooser</h3>
+        <img class="flex_images" src="CodingChallengeScreenShot.png">
+        <p>Developed by: Marcus Curran</p>
+        <p>Link: <a href="https://github.com/marcusc83/DinnerChooser">Dinner Chooser</a></p>
+      </div>
+      <div>
+        <h3>Coding Challenge</h3>
+        <img class="flex_images" src="CodingChallengeScreenShot.png">
+        <p>Developed by: Marcus Curran</p>
+        <p>Link: <a href="https://github.com/marcusc83/High-Touch-Technology-Coding-Challenge">Coding Challenge</a></p>
+      </div>
+    </div>
+    <div class="footer">
+      <h2 style="padding: 15px 0px;">Developed By: Marcus Curran</h2>
+    </div>
   </body>
 </html>
