--- a/volunteer.html
+++ b/volunteer.html
@@ -2,9 +2,10 @@
 <html>
   <head>
     <link type="text/css" rel="stylesheet" href="default.css">
+    <!--Link for social media Icons-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta charset="utf-8">
-    <title>Marcus' WebPage</title>
+    <title>About Marcus</title>
   </head>
   
   <body>
@@ -21,24 +22,56 @@
       <li class="social_media_buttons"><a href="https://github.com/marcusc83" class="fa fa-github"></a></li>
   </ul>
   <!-- end Nav Bar-->
+
     <h1> A Little About Me!!</h1>
+    <!--Making two columns. Text will be on side of Pics-->
     <div class="row">
+      <!--First Column-->
         <div class="column1 left1">
           <img src="WebPageDuct.jpg" class="webPageDuctPic">
         </div>
         <div class="column1 right1">
           <h2>Work</h2>
-          <p>Some text..</p>
+          <p>
+            I was working as a commercial Union HVAC tech/Sheet Metal worker up until September 1st.
+            That is when I took a job in the <a href="http://sheetmetal29.com">Union Office</a> as a Business Reprasenative/Organizer. So I now work out of the 
+            office, mostly on the phone or in front of a computer all day. I am looking forward to the new challenges that 
+            will come from this position, plus I get to use some of the skills I have gained from my courses at
+            Southwestern now. 
+          </p>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <p><---------- me at work</p>
         </div>
       </div>
       <div class="row">
+        <!--End First Columns and Begin 2nd column-->
         <div class="column2 left2">
-            <h2>Work</h2>
-            <p>Some text..</p>
+            <h2>Hobbies</h2>
+            <p>
+              When I am not working I enjoy spending time with the family, hanging out with friends, barbequeing, and golfing.
+              I do not get to do any of these activities as nearly often as I would like. But one day I am sure life will slow
+              down and I will get to enjoy more of it. 
+            </p>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <p style="float: right;">Where I usually land ----------></p>
         </div>
         <div class="column2 right2">
-          <img src="WebPageDuct.jpg" class="webPageDuctPic">
+          <img src="Golf.jpg" class="webPageDuctPic">
         </div>
+      </div>
+      <!--End of second Column-->
+      <div class="footer">
+        <h2 style="padding: 15px 0px;">Developed By: Marcus Curran</h2>
       </div>
   </body>
 </html>
