--- a/contact.html
+++ b/contact.html
@@ -22,6 +22,9 @@
   </ul>
   <!-- end Nav Bar-->
     <h1>Contact Me!!!</h1>
-    
+
+    <div class="footer">
+      <h2 style="padding: 15px 0px;">Developed By: Marcus Curran</h2>
+    </div>
   </body>
 </html>
