--- a/about.html
+++ b/about.html
@@ -1,6 +1,9 @@
+<!--Marcus Curran-->
+<!--Web Development Southwestern College-->
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <link type="text/css" rel="stylesheet" href="default.css">
     <!--Link for social media Icons-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -9,14 +12,16 @@
   </head>
   
   <body>
+    
     <!-- Navigation Bar. Same for each page-->
     <ul class="nav_bar">
       <li class="nav_bar_items"><a href="index.html">Home</a></li>
       <li class="nav_bar_items"><a href="projects.html">Projects</a></li>
-      <li class="nav_bar_items"><a href="contact.html">Contact</a></li>
       <li class="nav_bar_items"><a href="about.html">About</a></li>
       <li class="nav_bar_items"><a href="volunteer.html">Volunteering</a></li>
+      <li class="nav_bar_items"><a href="resume.html">My Resume</a></li>
       <li class="nav_bar_items"><a href="multimedia.html">Multimedia</a></li>
+      <li class="nav_bar_items"><a href="contact.html">Contact</a></li>
       <li class="social_media_buttons"><a href="https://www.facebook.com/marcus.curran.7" class="fa fa-facebook"></a></li>
       <li class="social_media_buttons"><a href="https://twitter.com/marcusauce" class="fa fa-twitter"></a></li>
       <li class="social_media_buttons"><a href="https://github.com/marcusc83" class="fa fa-github"></a></li>
@@ -28,7 +33,7 @@
     <div class="row">
       <!--First Column-->
         <div class="column1 left1">
-          <img src="WebPageDuct.jpg" class="webPageDuctPic">
+          <img src="images/WebPageDuct.jpg" class="webPageDuctPic">
         </div>
         <div class="column1 right1">
           <h2>Work</h2>
@@ -66,12 +71,9 @@
             <p style="float: right;">Where I usually land ----------></p>
         </div>
         <div class="column2 right2">
-          <img src="Golf.jpg" class="webPageDuctPic">
+          <img src="images/Golf.jpg" class="webPageDuctPic">
         </div>
       </div>
       <!--End of second Column-->
-      <div class="footer">
-        <h2 style="padding: 15px 0px;">Developed By: Marcus Curran</h2>
-      </div>
   </body>
 </html>
