--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,9 @@
+<!--Marcus Curran-->
+<!--Web Development Southwestern College-->
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <link type="text/css" rel="stylesheet" href="default.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta charset="utf-8">
@@ -8,23 +11,36 @@
   </head>
   
   <body>
+
     <!-- Navigation Bar. Same for each page-->
     <ul class="nav_bar">
       <li class="nav_bar_items"><a href="index.html">Home</a></li>
       <li class="nav_bar_items"><a href="projects.html">Projects</a></li>
-      <li class="nav_bar_items"><a href="contact.html">Contact</a></li>
       <li class="nav_bar_items"><a href="about.html">About</a></li>
       <li class="nav_bar_items"><a href="volunteer.html">Volunteering</a></li>
+      <li class="nav_bar_items"><a href="resume.html">My Resume</a></li>
       <li class="nav_bar_items"><a href="multimedia.html">Multimedia</a></li>
+      <li class="nav_bar_items"><a href="contact.html">Contact</a></li>
       <li class="social_media_buttons"><a href="https://www.facebook.com/marcus.curran.7" class="fa fa-facebook"></a></li>
       <li class="social_media_buttons"><a href="https://twitter.com/marcusauce" class="fa fa-twitter"></a></li>
       <li class="social_media_buttons"><a href="https://github.com/marcusc83" class="fa fa-github"></a></li>
-  </ul>
-  <!-- end Nav Bar-->
-    <h1>Contact Me!!!</h1>
+    </ul>
+    <!-- end Nav Bar-->
 
-    <div class="footer">
-      <h2 style="padding: 15px 0px;">Developed By: Marcus Curran</h2>
+    <div style="margin: 0% 10%;">
+      <div style="text-align: center; font-weight: bolder;"><h1>Shoot me a Message</h1></div>
+      <div style="background-color: goldenrod; width: 100%; height: 40px;"></div>
+      <div style="margin-top: 5%; text-align: center;">
+        <form>
+          <label for="fname">First name:</label>
+          <input type="text" id="fname" name="fname"><br><br>
+          <label for="lname">Last name:</label>
+          <input type="text" id="lname" name="lname"><br><br><br>
+          <label for="message">Message:</label><br>
+          <textarea name="message" style="width: 500px; height: 300px;"></textarea> <br><br><br>
+          <input type="submit" value="Submit Message">
+        </form> 
+      </div>
     </div>
   </body>
 </html>
