--- a/resume.html
+++ b/resume.html
@@ -11,7 +11,7 @@
   </head>
   
   <body>
-    
+
     <!-- Navigation Bar. Same for each page-->
     <ul class="nav_bar">
       <li class="nav_bar_items"><a href="index.html">Home</a></li>
@@ -24,9 +24,15 @@
       <li class="social_media_buttons"><a href="https://www.facebook.com/marcus.curran.7" class="fa fa-facebook"></a></li>
       <li class="social_media_buttons"><a href="https://twitter.com/marcusauce" class="fa fa-twitter"></a></li>
       <li class="social_media_buttons"><a href="https://github.com/marcusc83" class="fa fa-github"></a></li>
-  </ul>
-  <!-- end Nav Bar-->
-    <h1> This is Marcus Curran's Website!!!</h1>
-    <img src="images/myProfilePic.jpg" class="ProfilePic">
+    </ul>
+    <!-- end Nav Bar-->
+
+    <div style="margin: 0% 10%;">
+        <div style="text-align: center; font-weight: bolder;"><h1>Take A Look At My Resume!!!</h1></div>
+        <div style="background-color: goldenrod; width: 100%; height: 40px;"></div>
+        <div style="margin-top: 5%; text-align: center;">
+            <iframe src="images/Marcus-Curran-Resume.pdf" width="80%" height="800px"></iframe>
+        </div>
+    </div>
   </body>
 </html>
