--- a/volunteer.html
+++ b/volunteer.html
@@ -1,6 +1,9 @@
+<!--Marcus Curran-->
+<!--Web Development Southwestern College-->
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <link type="text/css" rel="stylesheet" href="default.css">
     <!--Link for social media Icons-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -9,69 +12,38 @@
   </head>
   
   <body>
+
     <!-- Navigation Bar. Same for each page-->
     <ul class="nav_bar">
       <li class="nav_bar_items"><a href="index.html">Home</a></li>
       <li class="nav_bar_items"><a href="projects.html">Projects</a></li>
-      <li class="nav_bar_items"><a href="contact.html">Contact</a></li>
       <li class="nav_bar_items"><a href="about.html">About</a></li>
       <li class="nav_bar_items"><a href="volunteer.html">Volunteering</a></li>
+      <li class="nav_bar_items"><a href="resume.html">My Resume</a></li>
       <li class="nav_bar_items"><a href="multimedia.html">Multimedia</a></li>
+      <li class="nav_bar_items"><a href="contact.html">Contact</a></li>
       <li class="social_media_buttons"><a href="https://www.facebook.com/marcus.curran.7" class="fa fa-facebook"></a></li>
       <li class="social_media_buttons"><a href="https://twitter.com/marcusauce" class="fa fa-twitter"></a></li>
       <li class="social_media_buttons"><a href="https://github.com/marcusc83" class="fa fa-github"></a></li>
   </ul>
   <!-- end Nav Bar-->
 
-    <h1> A Little About Me!!</h1>
-    <!--Making two columns. Text will be on side of Pics-->
-    <div class="row">
-      <!--First Column-->
-        <div class="column1 left1">
-          <img src="WebPageDuct.jpg" class="webPageDuctPic">
-        </div>
-        <div class="column1 right1">
-          <h2>Work</h2>
-          <p>
-            I was working as a commercial Union HVAC tech/Sheet Metal worker up until September 1st.
-            That is when I took a job in the <a href="http://sheetmetal29.com">Union Office</a> as a Business Reprasenative/Organizer. So I now work out of the 
-            office, mostly on the phone or in front of a computer all day. I am looking forward to the new challenges that 
-            will come from this position, plus I get to use some of the skills I have gained from my courses at
-            Southwestern now. 
-          </p>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <br>
-          <p><---------- me at work</p>
+ 
+  <div style="margin: 0% 10%;">
+      <div style="text-align: center;">    
+        <div style="padding: 10px;"><h1>Some of My Volunteering</h1></div>     
+        <div style="background-color: goldenrod;height: 50px;"></div>
+        <div style="padding: 10px;">
+          <img src="images/Zoobilee_2021.jpg" width="80%" style="border-radius: 10%;">
+          <h3>Zoobilee 2021 - I helped cook over 300 lbs of Brisket and Pulled pork and staff our booth for another successful Zoobilee!</h3>
+          <div style="background-color: goldenrod;height: 50px;"></div>
+          <img src="images/STPattysDayParade.jpg" width="80%" style="padding: 10px; border-radius: 10%;">
+          <h3>St Patty's Day Parade 2019</h3>
+          <div style="background-color: goldenrod;height: 50px;"></div>
+          <img src="images/DodgeBrawl.jpg" width="80%" style="padding: 10px; border-radius: 10%;">
+          <h3>Playing some dodge ball for charity in 2019!!</h3>
         </div>
       </div>
-      <div class="row">
-        <!--End First Columns and Begin 2nd column-->
-        <div class="column2 left2">
-            <h2>Hobbies</h2>
-            <p>
-              When I am not working I enjoy spending time with the family, hanging out with friends, barbequeing, and golfing.
-              I do not get to do any of these activities as nearly often as I would like. But one day I am sure life will slow
-              down and I will get to enjoy more of it. 
-            </p>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <p style="float: right;">Where I usually land ----------></p>
-        </div>
-        <div class="column2 right2">
-          <img src="Golf.jpg" class="webPageDuctPic">
-        </div>
-      </div>
-      <!--End of second Column-->
-      <div class="footer">
-        <h2 style="padding: 15px 0px;">Developed By: Marcus Curran</h2>
-      </div>
-  </body>
+   </div>   
+</body>
 </html>
