--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
   </head>
   
   <body>
-    <header class="header">
+    <header class="header" >
       <div class="navBar">
         <a href="#intro"><i class="fa fa-fw fa-home"></i>Home</a>
         <a href="#projectSection"><i class="fa fa-fw fa-code-fork"></i>Projects</a>
         <a href="#mySKillsTitle"><i class="fa fa-fw fa-address-card"></i>About</a>
         <a href="images/Marcus-Curran-Resume.pdf" target="_blank"><i class="fa fa-fw fa-file"></i></i>Resume</a>
-        <a href="javascript:void(0);" class="icon" id="menuIcon" onclick="myFunction()"><i class="fa fa-bars"></i></a>
+        <!--<a href="javascript:void(0);" class="icon" id="menuIcon" onclick="myFunction()"><i class="fa fa-bars"></i></a>-->
       </div>
       <div class="topPic">
-        <h2>Marcus Curran</h2>
+        <h2 id="topPicTitle">Marcus Curran</h2>
         <img src="images/myProfilePic.jpg" class="profilePic">
       </div>
     </header>
