--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
     </header>
     <div class="intro" id="intro">
       <div class="socialMediaBar">
-        <a href="#"><i class="fa fa-fw fa-facebook"></i></a>
-        <a href="#"><i class="fa fa-fw fa-twitter"></i></a>
-        <a href="#"><i class="fa fa-fw fa-github"></i></a>
-        <a href="#"><i class="fa fa-fw fa-linkedin"></i></a>
+        <a href="https://www.facebook.com/marcus.curran.7" target="_blank"><i class="fa fa-fw fa-facebook"></i></a>
+        <a href="https://twitter.com/marcusauce" target="_blank"><i class="fa fa-fw fa-twitter"></i></a>
+        <a href="https://github.com/marcusc83" target="_blank"><i class="fa fa-fw fa-github"></i></a>
+        <a href="https://www.linkedin.com/in/marcus-curran-72b822147/" target="_blank"><i class="fa fa-fw fa-linkedin"></i></a>
       </div>
       <div class="mainIntro">
         <h1>New Site, Who This!?</h1>
@@ -76,6 +76,8 @@
         </div>
       </div>
     </div>
+    <br>
+    <br>
     <div class="projectSection" id="projectSection">
       <h1 style="text-decoration: underline;">My Projects</h1>
       <div class="projectContainer">
